--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 
   <body>
-    <a name="arriba"></a>
+    <a name="principio"></a>
     <div class="wrapper">
       <header class="text-center">
         <a name="perfil"></a>
@@ -77,8 +77,8 @@
           <h6 class="titulo">Idiomas</h6>
           <ul class="list-unstyled">
             <li>Ingles <span>(Basico)</span></li>
-            <li>Español <span>(Nativo)</span></li>
-            <li>Guarani <span>(Nativo)</span></li>
+            <li>Español <span> Alto-(Nativo)</span></li>
+            <li>Guarani <span>Alto-(Nativo)</span></li>
           </ul>
         </div>
         <hr>
@@ -87,6 +87,9 @@
           <ul class="list-unstyled">
             <li>Musica</li>
             <li>Deportes</li>
+            <li>Modding</li>
+            <li>Cultura Japonesa</li>
+            <li>Cine</li>
             <li>Modding</li>
           </ul>
         </div>
@@ -98,6 +101,9 @@
             <li>Word</li>
             <li>Power Point</li>
             <li>Photoshop</li>
+            <li>Marketing</li>
+            <li>Capacidad de escucha</li>
+            <li>Habilidades de analisis</li>
           </ul>
         </div>
         <hr>
@@ -294,9 +300,16 @@
                   <span>Kotlin</span>
                 </div>
               </div>
-
-
-
+              <div class="progress">
+                <div
+                  data-placement="top"
+                  style="width: 15%"
+                  role="progressbar"
+                  class="progress-bar progress-bar-danger">
+                  <span class="sr-only">15%</span>
+                  <span>Phyton</span>
+                </div>
+              </div>
               <div class="progress-meter">
                 <div style="width: 25%" class="meter meter-left">
                   <span class="meter-text">No se</span>
@@ -342,8 +355,8 @@
         </div>
       </div>
       <div class="text-center">
-   <h4>
-    <a href="#arriba" ><h4>Main</h4></a>
+   <h4    >
+    <a href="#principio" ><h4>Main</h4></a>
    </h4>
 
     </div>
