primer cambio hover

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 
         </section>
-        <section class="section projects-section">
+        <section class="gallerya">
           <h2>
             <a name="proyectos"></a>
             <span></span>Presentacion de proyectos
@@ -236,7 +236,7 @@
         </div>
       </section>
 
-        <div>
+        <div class="final">
           <h2>Lenguajes y Plataformas</h2>
           <ul class="list-group">
             <a class="list-group-item">
@@ -328,7 +328,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="final">
           <a name="educacion"></a>
           <h2>Educacion</h2>
           <table class="table table-responsive">
